tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/gateway/https_redirect/to_b/_test_context/Gateway.1220106235.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-98059
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
